# morpc-py

./: .gitignore  CLAUDE.md  README.md  index.html  livemark.yaml  pyproject.toml  release_new_package.md
.github/workflows/: deploy.yml  python-publish.yml  todo_to_issue.yml
app/: app.py
demo/: demo.html  demo.md  index.html  index.md  morpc-color-demo.ipynb  morpc-py-demos.ipynb
doc/: .$Untitled Diagram.drawio.bkp  .09-morpc-color-demo.ipynb.swp  .09-morpc-color-demo_BASE_1788.ipynb.swp  .09-morpc-color-demo_LOCAL_1788.ipynb.swp  .09-morpc-color-demo_REMOTE_1788.ipynb.swp  .gitignore  01-morpc-py-demos.ipynb  03-morpc-varlookup-demo.ipynb  05-morpc-geos-demo.ipynb  06-morpc-frictionless-demo.ipynb  07-morpc-census-demo.html  07-morpc-census-demo.ipynb  09-morpc-color-demo.ipynb  09-morpc-color-demo_BACKUP_1788.ipynb  09-morpc-color-demo_BASE_1788.ipynb  09-morpc-color-demo_LOCAL_1788.ipynb  Untitled Diagram.drawio  api module diagram.drawio  index.md  morpc-color-demo.ipynb
docs/: 01-morpc-py-demos.ipynb  02-morpc-countylookup-demo.ipynb  04-morpc-plot-demo.ipynb  04-morpc-restapi-demo.ipynb  05-morpc-geos-demo.ipynb  07-morpc-census-demo.ipynb  08-morpc-plot-demo.ipynb  09-morpc-color-demo.ipynb  index.html  index.md  livemark.yaml  morpc-color-demo.html  morpc-color-demo.ipynb  morpc-color-demo.md  morpc-plot-demo.ipynb  morpc-py-demos.ipynb  morpc-restapi-demo.ipynb  myst.yml
morpc/: __init__.py  geocode.py  logs.py  morpc.py  req.py  utils.py
morpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_frictionless.py  test_morpc.py  test_utils.py
(+50 files in other folders)
